@@ -1,5 +1,7 @@
 2009-03-10  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
+	* Fixed copyright notice.
+
 	* Released 1.08
 
 2009-02-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>
